# httpd-conf-parser

./: HttpdConfigParser.hs  ParserTest.hs  README  httpd-conf-parser.cabal  httpdconfparser.cabal
src/Apache/: Directive.hs
src/Parser/: CST.hs  ConfigQuery.hs  HttpdConfigParser.hs
src/Parser/Internal/: AST.hs  CST.hs
tests/: Main.hs  ParserQTest.hs  ParserTest.hs  ParserUTest.hs
